add update friend note and top friend api
