# router/api.go
@@ -76,6 +76,8 @@ func RegisterApiRoutes(router *gin.Engine) {
 			apiRouter.POST("/SendFriendRequest", friends.SendFriendRequest)
 			apiRouter.POST("/ByFriendRequest", friends.ByFriendRequest)
 			apiRouter.POST("/RemoveFriend", friends.RemoveFriend)
+			apiRouter.POST("/FriendPlacedTop", friends.FriendPlacedTop)
+			apiRouter.POST("/UpdateFriendNote", friends.UpdateFriendNote)
 
 		}
 
